# Universal-UART-to-DIM-service-converter

./: README.md
Uniwersalny_konwerter_UART_DIM/: CMakeLists.txt  startDNS.sh  startSerwer.sh
Uniwersalny_konwerter_UART_DIM/client/: client.py
Uniwersalny_konwerter_UART_DIM/server/: CMakeLists.txt
Uniwersalny_konwerter_UART_DIM/server/include/: server.hpp
Uniwersalny_konwerter_UART_DIM/server/src/: main.cpp  server.cpp
